add monitoring page
